set(Headers
	bio.h
	bio_parameters.h
	wavelet_transform.h)

set(Sources
	bio_2d.c
	bio_2dy.c
	bio_3d.c
	bio1.2d.c
	bio1.2dy.c
	bio1.3d.c
	bio13579.2d.c
	bio13579.2dy.c
	bio13579.3d.c
	compimages3.main.c
	getfilter.c
	wavelet_dec3.c
	wavelet_rec3.c
	wavelet_transform.c)

#include_directories ("${PROJECT_SOURCE_DIR}/DEPENDECY")

add_library(libwavelets ${Headers} ${Sources})
#target_link_libraries(libwavelets DEPENDECY)