set(CPP_FILE hello)
set(CPP_FILE_NAME ${CPP_FILE}.cpp)

# set up matlab libraries
set(CPP_FILE_NAME ${CPP_FILE}.cpp)
INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR})
add_library(${CPP_FILE} SHARED ${CPP_FILE_NAME} ${CMAKE_SOURCE_DIR}/Matlabdef.def)
target_link_libraries(${CPP_FILE} ${MATLAB_LIBRARIES})

## Change naming for the correct matlab wrapper
if(WIN32)
  if (CMAKE_CL_64)
      MESSAGE("Win 64")
      SET_TARGET_PROPERTIES(${CPP_FILE} PROPERTIES SUFFIX .mexw64 LINK_FLAGS /export:mexFunction)
  else()
      MESSAGE("Win 32")
      SET_TARGET_PROPERTIES(${CPP_FILE} PROPERTIES SUFFIX .mexw32 LINK_FLAGS /export:mexFunction)
  endif()
else(WIN32)
  if(APPLE)
    if (CMAKE_SIZEOF_VOID_P MATCHES "8")
      MESSAGE("Mac 64")
      SET_TARGET_PROPERTIES(${CPP_FILE} PROPERTIES SUFFIX .mexmaci64)
    else()
      MESSAGE("Mac 32")
      SET_TARGET_PROPERTIES(${CPP_FILE} PROPERTIES SUFFIX .mexmaci32)
    endif (CMAKE_SIZEOF_VOID_P MATCHES "8")
  else(APPLE)
    if (CMAKE_SIZEOF_VOID_P MATCHES "8")
      MESSAGE("Linux 64")
      SET_TARGET_PROPERTIES(${CPP_FILE} PROPERTIES SUFFIX .mexa64)
    else()
      MESSAGE("Linux 32")
      SET_TARGET_PROPERTIES(${CPP_FILE} PROPERTIES SUFFIX .mexglx)
    endif (CMAKE_SIZEOF_VOID_P MATCHES "8")
  endif(APPLE)
endif(WIN32)

# install to /bin by default
install(TARGETS ${CPP_FILE} DESTINATION ../bin)